--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-#menu {
+.menubar {
     list-style:none;
     width:100%;
     height:40px;
@@ -13,7 +13,7 @@
     box-shadow:inset 0px 0px 1px #edf9ff;
 }
 
-#menu li {
+.menubar li {
     float:left;
     display:block;
     text-align:center;
@@ -22,16 +22,7 @@
     border:none;
 }
 
-#menu li:hover {
-    border: 1px solid #777777;
-
-    /* Background color and gradients */
-
-    background: #F4F4F4;
-
-}
-
-#menu li a {
+.menubar li a {
     font-family:Arial, Helvetica, sans-serif;
     font-size:14px;
     color: #EEEEEE;
@@ -41,43 +32,40 @@
     text-shadow: 1px 1px 1px #000;
 }
 
-#menu li:hover a {
+.menubar li:hover {
+    border: 1px solid #777777;
+    background: #F4F4F4;/* Background color and gradients */
+}
+
+.menubar li:hover a {
     color:#161616;
     text-shadow: 1px 1px 1px #FFFFFF;
+    height: 30px; /* height of the menubar titles */
 }
-#menu li .drop {
+
+.menubar li .drop {
     padding-right:0px;
 }
 
 
-.dropdown_1column,
-.dropdown_2columns,
-.dropdown_3columns,
-.dropdown_4columns,
-.dropdown_5columns {
+.menu {
     position:absolute;
     left:-999em; /* Hides the drop down */
+    z-index: 1000; /*keeps the menu on top of other items*/
     text-align:left;
-    padding:10px 5px 10px 5px;
     border-top:none;
-    margin-top: 10px;
-
-    /* Gradient background */
-    background:#F4F4F4;
+    margin-top: 7px;
+    background:#F4F4F4; /* menu background */
 
 }
 
-.dropdown_1column {width: 140px;}
-.dropdown_2columns {width: 280px;}
-.dropdown_3columns {width: 420px;}
-.dropdown_4columns {width: 560px;}
-.dropdown_5columns {width: 700px;}
+.menu {width: 1000px;}
 
-#menu li:hover .dropdown_1column,
-#menu li:hover .dropdown_2columns,
-#menu li:hover .dropdown_3columns,
-#menu li:hover .dropdown_4columns,
-#menu li:hover .dropdown_5columns {
+.menubar li:hover .dropdown_1column,
+.menubar li:hover .dropdown_2columns,
+.menubar li:hover .dropdown_3columns,
+.menubar li:hover .dropdown_4columns,
+.menubar li:hover .menu {
     left:-1px;top:auto;
 }
 
@@ -92,8 +80,5 @@
     margin-left: 5px;
     margin-right: 5px;
 }
-.col_1 {width:130px;}
-.col_2 {width:800px;}
-.col_3 {width:410px;}
-.col_4 {width:550px;}
-.col_5 {width:690px;}
+
+.col_2 {width:300px;}
